# a7loader

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: app.c  app.h  buffers.c  buffers.h  main.c  paths.c  paths.h  type.c  type.h  vector.c  vector.h
src/formats/: property_list.c  property_list.h
src/hle/: collection.c  collection.h  content.c  content.h
src/loader/: bundle.c  bundle.h  ipa.c  ipa.h
src/virt_io/: dir.c  dir.h  file.c  file.h  type.c  type.h  zipped_dir.c  zipped_dir.h  zipped_file.c  zipped_file.h
